Implemeted a search option